# libpdt

./: CMakeLists.txt  Doxyfile  README.md  taskreq.txt
doc/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  index.html  lpdt_8h.html  lpdt_8h_source.html  lpdt__codes_8h.html  lpdt__codes_8h_source.html  lpdt__color_8h.html  lpdt__color_8h_source.html  lpdt__string_8h_source.html  lpdt__text_8h.html  lpdt__text_8h_source.html  structlpdt__buffer__code__rgb__s.html  structlpdt__buffer__effect__s.html  structlpdt__color__fgbg__rgb__s.html  structlpdt__color__fgbg__s.html  structlpdt__color__param__rgb__s.html  structlpdt__color__param__s.html  structlpdt__color__rgb__bg__s.html  structlpdt__color__rgb__fg__s.html  structlpdt__color__rgb__s.html  structlpdt__color__s.html  structlpdt__dyed__string__s.html  structlpdt__make__color__fgbg__args.html  structlpdt__make__color__fgbg__rgb__args.html
doc/html/search/: all_0.js  (+8 more)
doc/latex/: annotated.tex  files.tex  lpdt_8h.tex  lpdt__codes_8h.tex  lpdt__color_8h.tex  lpdt__text_8h.tex  refman.tex  structlpdt__buffer__code__rgb__s.tex  structlpdt__buffer__effect__s.tex  structlpdt__color__fgbg__rgb__s.tex  structlpdt__color__fgbg__s.tex  structlpdt__color__param__rgb__s.tex  structlpdt__color__param__s.tex  structlpdt__color__rgb__bg__s.tex  structlpdt__color__rgb__fg__s.tex  structlpdt__color__rgb__s.tex  structlpdt__color__s.tex  (+3 more)
src/: lpdt.c  lpdt.h  lpdt_codes.c  lpdt_codes.h  lpdt_color.c  lpdt_color.h  lpdt_string.c  lpdt_string.h  lpdt_text.c  lpdt_text.h
test/: .ninja_deps  .ninja_log  CMakeLists.txt  test_print.c
